--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.application.name=sales_management
 
 server.port=8080
 
-spring.datasource.url=jdbc:postgresql://localhost:5432
+spring.datasource.url=jdbc:postgresql://localhost:5432/products_db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
